To-do-list-microservices/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth-service
        image: to-do-list-microservices_auth-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          requests:
             cpu: 100m
