To-do-list-microservices/k8s/auth-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: auth
spec:
  containers:
    - name: auth
      image: to-do-list-microservices_auth-service:latest
      imagePullPolicy: Never
      ports:
      - containerPort: 80
