To-do-list-microservices/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: auth.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 80
